name:
  "coq-tmc"
synopsis:
  "Verification of the TMC program transformation"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
  "Gabriel Scherer"
  "François Pottier"
]
homepage:
  "https://github.com/clef-men/tmc"
bug-reports:
  "https://github.com/clef-men/tmc/issues"
depends: [
  "coq" {= "8.15.2"}
  "coq-stdpp" {= "dev.2023-06-01.0.d1254759"}
  "coq-iris" {= "dev.2023-06-30.0.7e865892"}
  "coq-diaframe" {= "dev.2023-06-15.0.1c3b5549"}
  "coq-autosubst" {= "1.7"}
  "coq-paco" {= "4.2.0"}
]
build: [
  make "-j%{jobs}%"
]
